# moonrock

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  vcpkg.json
example/simple/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt
lib/moonrock/: CMakeLists.txt
lib/moonrock/include/moonrock/: moonrock.hpp
lib/moonrock/src/: moonrock.cpp
moonrock/: CMakeLists.txt  actor.cpp  actor.h  image.cpp  image.h  math_tool.h  mesh.cpp  mesh.h  moonrock.cpp  moonrock.h  utils.cpp  utils.h
resource/: Character Running.dmd  fill_screen.frag  fill_screen.vert
test/: CMakeLists.txt  output_img.cpp  output_png.cpp  output_window.cpp  render_things.cpp  render_things.h
